# api

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml  publish.yml
c/: .clang-tidy  CMakeLists.txt
c++/: CMakeLists.txt
c++/include/quasar/api/: crc16.h  enums.h  exif.h  metadata.h  span.h
c++/include/quasar/api/detail/: export.h
c++/src/private/: crc16.cc  exif.cc
c++/test_data/: empty_metadata.json  m1-30-10-2024_11-26-41-meta.json  migrated_metadata.json
c++/tests/: CMakeLists.txt  helper.cc  helper.h  test_metadata.cc
c/include/quasar/api/: crc16.h  enums.h  exif.h
c/include/quasar/api/detail/: definitions.h
c/include/quasar/api/ffi/: crc16.h  enums.h  exif.h  powerswitch.h
c/include/quasar/api/ffi/detail/: definitions.h  export.h
c/src/private/: crc16.c  exif.c  powerswitch.c
